--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img  class="logo" src="images/logo.png" alt="logo"></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
@@ -79,20 +79,13 @@
     <section id="about-us">
         <div class="container">
 			<div class="center wow fadeInDown">
-				<h2>About GeekTree&trade;</h2>
+				<h2>Meet our Team</h2>
 				<p class="lead">
-				GeekTree team consists of talented individuals who are passionate about solving some of the most pressing problems in world of data analytics.
-				Most of the team holds advanced degrees from top-ranked schools and have strong industry experience in the field of data analytics, big data technologies and predictive analytics.
+				Our team consists of talented individuals who are passionate about solving some of the most pressing problems in the world of data analytics.
+				Many of our professionals hold advanced degrees from top-ranked schools and have strong industry experience in the field of data analytics, machine learning, big data technologies and predictive analytics.
 				</p>
 			</div>
-			
-			<!-- about us slider -->
-			
-			<!-- our-team -->
-			<div class="team">
-				<div class="center wow fadeInDown">
-				</div>
-			</div><!--section-->
+
 			<!-- team starts -->
 			<div id="execs" class="photo-section">                
 			<div  class="photo-container">          
@@ -100,7 +93,7 @@
 					<img src="images/team/yatish.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/yatish.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Yatish Gupta</h3>            
-					<h4>Role</h4>          
+					<h4>Co-Founder</h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -109,7 +102,7 @@
 						</div>              
 						<div class="bio">                
 							<h3>Yatish Gupta</h3>                
-							<h4>Role</h4>              
+							<h4>Co-Founder</h4>              
 							<p><strong>Yatish Gupta</strong>  has more than 12 years of experience in IT industry. He is a geek to the core and passionately follows latest technical trends. His strength lies in figuring out the right solution and technologies for complex business problems.Yatish holds a Bachelor's and a Master's degree in Mechanical Engineering from IIT Bombay</p>              
 						</div>            
 					</div>          
@@ -152,7 +145,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						<div class="bio">                
 							<h3>Varun Aggarwal</h3>                
 							<h4>Role</h4>              
-							<p>Test description</p>       
+							<p>Core techy, who likes exploring new technology stacks and solving business problems. He holds a B.Tech, Production and Industrial Engineering from Indian institute of technology, Roorkee and has 7+ years of experience in developing SAAS based application for both start ups and enterprises.</p>       
 							</div>            
 					</div>          
 				</div>        
@@ -212,7 +205,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						<div class="bio">                
 							<h3>Mahesh Sharma</h3>                
 							<h4>Role</h4>              
-							<p><strong>Mahesh</strong>  has more than 9 years of experience in executing various technology projects. He has rich expertise in Microsoft technologies. He has deep knowledge in the data sciences field specially on cloud platforms. Mahesh holds a Bachelor's degree in Metallurgical Engineering & Material Sciences from IIT Bombay</p>              
+							<p><strong>Mahesh</strong> has more than 9 years of experience in handling various tech based projects. Mahesh holds a Bachelor's degree in Metallurgical Engineering & Material Sciences from IIT Bombay</p>              
 						</div>            
 					</div>          
 				</div>        
@@ -230,7 +223,8 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 								
 				<div class="col-lg-4">
 				      <!-- Footer widget area 1 -->
-		              <div id="text-3" class="widget"><h4>About Geek Tree</h4>			<div class="textwidget">Geek Tree analytics dashboard is a mature, business-ready tool for analyzing reports. Its Google search like interface lets you slice and dice the data as you like with super ease<br><br>
+		              <div id="text-3" class="widget"><h4>About Geek Tree</h4>			<div class="textwidget">
+					  Geek Tree analytics dashboard is a mature, business-ready tool for analyzing complex business reports. Its Google search like interface lets you slice and dice the data as you like with super ease<br><br>
 					  Try it once and you will never go back to your traditional dashboards again 
 					</div>
 		</div>				</div><!--/span_3-->
@@ -255,7 +249,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 			              <div id="text-4" class="widget"><h4>Contact Us</h4>			<div class="textwidget">We are located at the business capital of India, Mumbai <br><br>
 
 Sales & Support: <a href="mailto:contact@geektree.in">contact@geektree.in</a> <br>
-Phone: <a href="tel:+91 20 2750 9474>+91 20 2750 9474</a>
+Phone: <a href="tel:+91 20 2750 9474">+91 20 2750 9474</a>
  <br></div>
 		</div>					     
 					</div><!--/span_3-->
