--- a/contact-us.html
+++ b/contact-us.html
@@ -97,15 +97,15 @@
                                     <h5>Head Office</h5>
                                     <p>1101 Royal Park,Kanjur Marg East <br>
                                      Mumbai</p>
-                                    <p>Phone:+91 20 2750 9474 <br>
-                                    Email Address:contact@geektree.in</p>
+                                    <p>Phone: +91 976 784 3495 <br>
+                                    Email Address: contact@geektree.in</p>
                                 </address>
 								 <address>
-                                    <h5>Other Offices</h5>
+                                    <h5>Registered Office</h5>
                                     <p>D-402, Manav Sliver Skyscpes <br>
                                      Wakad Pune 411057</p>
-                                    <p>Phone:+91 20 2750 9474 <br>
-                                    Email Address:contact@geektree.in</p>
+                                    <p>Phone: +91 20 2750 9474 <br>
+                                    Email Address: contact@geektree.in</p>
                                 </address>
 
                              
