--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             </ol>
             <div class="carousel-inner">
 
-                <div class="item active" style="background-image: url(images/slider/bg2.jpg)">
+                <div class="item active" style="background-image: url(images/slider/fbg4.jpg)">
                     <div class="container">
                         <div class="row slide-margin">
                             <div class="col-sm-6 col-sm-offset-2">
                                 <div class="slide1 carousel-content">
-                                    <h1 class="animation animated-item-1">Search based analytics</h1>
+                                    <h1 class="animation animated-item-1">NLP based Search and Analytics</h1>
                                    <h2 class="animation animated-item-2">Forget pre-configured dashboards. Now just Search and get the report you need!
 									  </h2>
 									<p> </p>
@@ -148,7 +148,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-search"></i>
-                            <h2>Search based analytics</h2>
+                            <h2>Natural Language based Search (NLP)</h2>
                             <h3>We make your data understand your language. you can simply search what you want and get the desired reported
 							in fractions of seconds.</h3>
                         </div>
@@ -157,7 +157,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-bar-chart-o"></i>
-                            <h2>Interactive reporting with drilldown</h2>
+                            <h2>Interactive reports</h2>
                             <h3>It auto identifies the most suitable chart from the query and lets you navigate through your data by intuitive interactions,charts, drilldown, comparison etc.</h3>
                         </div>
                     </div><!--/.col-md-4-->
@@ -166,7 +166,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                            <i class="fa fa-crosshairs"></i>
-                            <h2>Outliers detection</h2>
+                            <h2>Analytics and Outliers</h2>
                             <h3>Outliers are hard to find specially when the data is rolled-up/has multiple dimensions used. The tool auto detects hidden anomalies (false trends) in your data without even doing drilling down. </h3>
                         </div>
                     </div><!--/.col-md-4-->
@@ -174,7 +174,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-cogs"></i>
-                            <h2>Predictive analytics and forecasting</h2>
+                            <h2>Statistical Forecasting</h2>
                             <h3>Analytics is incomplete without forecasting. The tool uses some of the most cutting edge predictive analytics technologies to predict trends in the data </h3>
                         </div>
                     </div><!--/.col-md-4-->
