--- a/products.html
+++ b/products.html
@@ -91,7 +91,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-search"></i>
-                            <h2>Search based analytics</h2>
+                            <h2>Natural Language based Search (NLP)</h2>
                             <h3>We make your data understand your language. you can simply search what you want and get the desired reported
 							in fractions of seconds.</h3>
                         </div>
@@ -100,7 +100,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-bar-chart-o"></i>
-                            <h2>Interactive reporting with drilldown</h2>
+                            <h2>Interactive reports</h2>
                             <h3>It auto identifies the most suitable chart from the query and lets you navigate through your data by intuitive interactions,charts, drilldown, comparison etc.</h3>
                         </div>
                     </div><!--/.col-md-4-->
@@ -109,7 +109,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                            <i class="fa fa-crosshairs"></i>
-                            <h2>Outliers detection</h2>
+                            <h2>Analytics and Outliers</h2>
                             <h3>Outliers are hard to find specially when the data is rolled-up/has multiple dimensions used. The tool auto detects hidden anomalies (false trends) in your data without even doing drilling down. </h3>
                         </div>
                     </div><!--/.col-md-4-->
@@ -117,7 +117,7 @@
                     <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-cogs"></i>
-                            <h2>Predictive analytics and forecasting</h2>
+                            <h2>Statistical Forecasting</h2>
                             <h3>Analytics is incomplete without forecasting. The tool uses some of the most cutting edge predictive analytics technologies to predict trends in the data </h3>
                         </div>
                     </div><!--/.col-md-4-->
@@ -130,7 +130,7 @@
 	<hr>
 			<h2 class="center" style="color:black;">See in Action</h2>
 		
-    			<div class="video-container"><iframe width="420" height="315" src="https://www.youtube.com/embed/ulr9eK4er-Y" frameborder="0" allowfullscreen></iframe></div>
+    			<div class="video-container"><video width="1280"height="720" src="videos/GTT_Demo_v2.mp4" frameborder="0" controls  allowfullscreen style='position:relative; left:5%;'></video></div>
 
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
