--- a/about-us.html
+++ b/about-us.html
@@ -93,7 +93,7 @@
 					<img src="images/team/yatish.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/yatish.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Yatish Gupta</h3>            
-					<h4>Co-Founder</h4>          
+					<h4>Director & Co-Founder</h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -102,7 +102,7 @@
 						</div>              
 						<div class="bio">                
 							<h3>Yatish Gupta</h3>                
-							<h4>Co-Founder</h4>              
+							<h4>Director & Co-Founder</h4>              
 							<p><strong>Yatish Gupta</strong>  has more than 12 years of experience in IT industry. He is a geek to the core and passionately follows latest technical trends. His strength lies in figuring out the right solution and technologies for complex business problems.Yatish holds a Bachelor's and a Master's degree in Mechanical Engineering from IIT Bombay</p>              
 						</div>            
 					</div>          
@@ -113,7 +113,7 @@
 					<img src="images/team/Vishal.jpg"  alt="Vishal" class="img-rounded hidden">            
 					<img src="images/team/bw/Vishal.jpg" alt="Vishal" class='img-rounded'>            
 					<h3>Vishal Sharma</h3>            
-					<h4>Co-Founder and Principle Architect</h4>          
+					<h4>Principal Architect & Co-Founder</h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -122,7 +122,7 @@
 						</div>              
 						<div class="bio">                
 							<h3>Vishal Sharma</h3>                
-							<h4>Co-Founder and Principle Architect</h4>              
+							<h4>Principal Architect & Co-Founder</h4>              
 							<p>A technologist
 at heart, Vishal brings in 13 years of experience in Product Engineering and Technology Services for Startups and Enterprises. Prior to co-founding GeekTree, Vishal was at Arkin Net (a market disruptive startup up in SDN space) helping them build their core product. At Talentica Software he lead the core team building a Rich Media Ad creation platform, for another startup Bonzai, whose ad impressions reached 1 billion mark this year. Vishal started his career in auto sector with companies like Autoform Engineering and Geometric Software Solutions building CAD products for some of the premier Auto & Aerospace brands like Boeing, Airbus, BWM, VolksWagen, Honda and Goodyear. He also held key delivery roles in Software Services Companies like Synechron Technologies, KPIT Cummins and Smartek Consultancies in Senior Architect and Technology Specialist Roles. Vishal holds a Bachelors degree in Mechanical Engineering for Indian Institute of Technology, Varanasi.
 </p>              
@@ -135,7 +135,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 					<img src="images/team/Varun.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/Varun.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Varun Aggarwal</h3>            
-					<h4>Role</h4>          
+					<h4>Co-Founder</h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -144,7 +144,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						</div>              
 						<div class="bio">                
 							<h3>Varun Aggarwal</h3>                
-							<h4>Role</h4>              
+							<h4>Co-Founder</h4>              
 							<p>Core techy, who likes exploring new technology stacks and solving business problems. He holds a B.Tech, Production and Industrial Engineering from Indian institute of technology, Roorkee and has 7+ years of experience in developing SAAS based application for both start ups and enterprises.</p>       
 							</div>            
 					</div>          
@@ -155,7 +155,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 					<img src="images/team/Prasanna.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/Prasanna.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Prasanna Deshpande</h3>            
-					<h4>Role</h4>          
+					<h4>Director and Co-Founder</h4> 
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -164,18 +164,19 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						</div>              
 						<div class="bio">                
 							<h3>Prasanna Deshpande</h3>                
-							<h4>Role</h4>              
-							<p>Test Description</p>              
+							<h4>Director and Co-Founder</h4>              
+							<p><strong>Prasanna</strong>  has 15 years of experience in the IT industry. Association with multiple fortune 500 companies during these years has honed Prasanna's skills in identifying and tackling the challenging business problems. He's the thinker and problem solver of the group. Though focused on business side more Prasanna loves to dig into technology aspects frequently as this helps in better and efficient solutions. He holds Master's Degree in Mechanical Engineering and loves adventure sports.</p>
 						</div>            
 					</div>          
 				</div>        
-			</div>       
+			</div> 
+<!--			
 <div  class="photo-container">          
 				<div class="photo">            
 					<img src="images/team/Mukundan.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/Mukundan.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Mukundan NC</h3>            
-					<h4>Role</h4>          
+					<h4></h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -184,8 +185,8 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						</div>              
 						<div class="bio">                
 							<h3>Mukundan NC</h3>                
-							<h4>Role</h4>              
-							<p>Test Description</p>              
+							<h4></h4>              
+							<p></p>              
 						</div>            
 					</div>          
 				</div>        
@@ -195,7 +196,7 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 					<img src="images/team/mahesh.jpg"  alt="Mahesh" class="img-rounded hidden">            
 					<img src="images/team/bw/mahesh.jpg" alt="Mahesh" class='img-rounded'>            
 					<h3>Mahesh Sharma</h3>            
-					<h4>Role</h4>          
+					<h4></h4>          
 				</div>          
 				<div class="chidden">            
 					<div class="text exec-content">              
@@ -204,13 +205,13 @@ at heart, Vishal brings in 13 years of experience in Product Engineering and Tec
 						</div>              
 						<div class="bio">                
 							<h3>Mahesh Sharma</h3>                
-							<h4>Role</h4>              
+							<h4></h4>              
 							<p><strong>Mahesh</strong> has more than 9 years of experience in handling various tech based projects. Mahesh holds a Bachelor's degree in Metallurgical Engineering & Material Sciences from IIT Bombay</p>              
 						</div>            
 					</div>          
 				</div>        
 			</div>       			
-		</div>
+	-->	</div>
 			<!-- team ends -->
 		</div><!--/.container-->
     </section><!--/about-us-->
